Migrate to Jakarta Bean Validation